2005-09-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* NOTICE: Correct information.
	* src/rule.c,
	* src/rule.h: Clean code.
	* src/check.c: Check if `nonterm_list' is not empty before
	accessing its first element.
	* src/parser.y: Fix minor bug when more than one file is
	processed.
	* src/main.c: Fix minor bug with `--version' and put option
	parsing in a single function.
	* src/main.c (main): Ease memory leak detection by using a
	programmer-level allocator for list.
	* src/emit_functions.c,
	* src/emit_cost.c: Output C90 compliant code.

2005-09-01  Akim Demaille  <akim@epita.fr>

	* configure.ac: Bump to 1.0.2a.

2005-08-31  Akim Demaille  <akim@epita.fr>

	-I is not honored.

	* src/main.c: It seems that the values passed to the option
	processing callback of g_option_context_parse are not persistent.
	So use strdup/free for these values.

2005-07-13  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* sample.brg: Move to...
	* tests/sample.brg: ...Here.

	* parser.y: Move to...
	* src/parser.y: ...Here.

	* monoburg.1: Move to...
	* src/monoburg.1: ...Here.

	* monoburg.c,
	* monoburg.h: Split in...
	* src/emit.c,
	* src/parser.h,
	* src/emit.h,
	* src/rule.c,
	* src/emit_kids.c,
	* src/rule.h,
	* src/check.c,
	* src/emit_files.c,
	* src/emit_pretty_print.c,
	* src/check.h,
	* src/main.c,
	* src/emit_cost.c,
	* src/emit_functions.c,
	* src/monoburg.h: ...These files.

	* src/Makefile.am,
	* tests/Makefile.am: New. Create accordingly.

	* NOTICE,
	* AUTHORS,
	* NEWS: New. Add some package related files.

	* configure.ac,
	* Makefile.am: Update accordingly.

2005-06-27  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* configure.ac: Bump to 1.0.2.

2005-06-27  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c (check_varname): Fix typo in yyerror call.
	* monoburg.c,
	* monoburg.h: Check the use of named rules with multiple rules.
	* parser.y: Call the named rules check with multiple rules.
